# logseq_tweaker

./: .gitignore  LICENSE  Readme.md
sample_workspace/journals/: 2024_12_19.md
sample_workspace/pages/: Existing Topic.md
script/: .env  example.env  folder_reader.py  logseq_tweaker.py  pyproject.toml  reset_workspace.py  sample_data_structure.json  test_folder_reader.py  test_logseq_tweaker.py
script/workspace_initial/journals/: 2024_12_19.md
script/workspace_initial/pages/subFolder/: ExistingTopic2.md
